samples/_failures_safe/1761501926_8af756_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ce4f7ac.c: In function ‘main’:
./samples/SAFE/__tmp_4ce4f7ac.c:142:14: error: ‘read’ undeclared (first use in this function); did you mean ‘fread’?
  142 |         if (!read
      |              ^~~~
      |              fread
./samples/SAFE/__tmp_4ce4f7ac.c:142:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4ce4f7ac.c:142:18: error: expected ‘)’ at end of input
  142 |         if (!read
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_4ce4f7ac.c:142:9: error: expected declaration or statement at end of input
  142 |         if (!read
      |         ^~
./samples/SAFE/__tmp_4ce4f7ac.c:142:9: error: expected declaration or statement at end of input
